--- a/assets/css/blank.css
+++ b/assets/css/blank.css
@@ -2,3 +2,5 @@
 /* Just an empty CSS file */
 /* Just an empty CSS file */
 /* Just an empty CSS file */
+/* Just an empty CSS file */
+/* Just an empty CSS file */
