--- a/assets_ltb/css/child/style-child.css
+++ b/assets_ltb/css/child/style-child.css
@@ -65,3 +65,59 @@
         width: 710px;
     }
 }
+
+
+.tile .tile-object2 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  min-height: 30px;
+  background-color: transparent;
+  *zoom: 1;
+}
+
+.tile .tile-object2:before,
+.tile .tile-object2:after {
+  display: table;
+  content: "";
+}
+
+.tile .tile-object2:after {
+  clear: both;
+}
+
+.tile .tile-object2 > .name {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  margin-right: 15px;
+  font-weight: 400;
+  font-size: 13px;
+  color: #FF0000;
+}
+
+.tile .tile-object2 > .name > i {
+  vertical-align: middle;
+  display: block;
+  font-size: 24px;
+  height: 18px;
+  width: 24px;
+}
+
+.tile .tile-object2 > .number {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 0;
+  color: #ffffff;
+  text-align: center;
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: 0.01em;
+  line-height: 14px;
+  margin-bottom: 8px;
+  margin-right: 10px;
+}
