Added black background to override default white of Metronic theme

--- a/assets_ltb/css/child/style-child.css
+++ b/assets_ltb/css/child/style-child.css
@@ -18,6 +18,13 @@
 -------------------------------------------------------------- */
 
 /*
+ * Replace the default white background with black background
+ */
+.page-content {  
+  background-color: #000; 
+}
+
+/*
  * This centres the tiles and also ensures that they realign 
  * properly as the window resizes. 
  * 
