--- a/assets_ltb/css/child/style-responsive-child.css
+++ b/assets_ltb/css/child/style-responsive-child.css
@@ -1,5 +1,9 @@
 /*
  * Copyright (c) 2014 Gilbert Peffer
+ * 
+ * This is a child theme of Metronic, a commercial template developed by http://www.keenthemes.com.
+ * While this child theme is distributed under the Apache License (see below), we cannot distribute
+ * the parent theme. You need to purchase that theme from ThemeForest. 
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License. You may obtain a copy of the License at
@@ -10,6 +14,7 @@
  * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  * or implied. See the License for the specific language governing permissions and limitations under
  * the License.
+ * 
  */
 
 @import url("../../../assets/css/style-responsive.css");
