--- a/assets_ltb/css/child/style-child.css
+++ b/assets_ltb/css/child/style-child.css
@@ -62,6 +62,17 @@
   min-height: 44px;
 }
 
+.backbar 
+{
+  padding: 10px 0px 0px 5px;
+  display: inline-block;
+  height: 42px;
+  width: 15px;
+  float: left;
+  color: White;
+  margin-top: 3px
+}
+
 .header.navbar .navbar-nav > li.dropdown > a:last-child {
     padding-right: 15px;
 }
